# appify-om

./: .env.example  .gitignore  Appify_OM_API.postman_collection.json  Appify_OM_Local.postman_environment.json  Appify_OM_Production.postman_environment.json  DEPLOYMENT.md  Dockerfile  GENERIC_DATA_API_DESIGN.md  LOCAL_DEVELOPMENT.md  PHASE0_SUMMARY.md  PHASE2_DATA_API.md  PHASE3_ADVANCED_FEATURES.md  PHASE4_SUMMARY.md  POSTMAN_TESTING_GUIDE.md  README.md  REVISION_26_DEPLOYMENT_SUMMARY.md  ROLE_STRUCTURE.md  VERIFICATION_CHECKLIST.md  check-core-datatypes.sh  create-iam-task-role.sh  deploy.sh  get-aws-resources.sh  populate-core-datatypes.sh  pyproject.toml  run-local.sh  task-definition.json  test_sql_execution.py  validate_sql_fix.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/db/: __init__.py  connection.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  data_api.py  datatype_mapping.py  object_metadata.py
app/services/: __init__.py  audit_logger.py  datatype_mapping_service.py  (+5 more)
sql/: migration-add-modified-status.sql  migration-add-s3-folder-path-tenants.sql  migration-add-s3-folder-path.sql  phase0-core-bootstrap.sql  phase0-migration-existing-schemas.sql  phase0-sample-data.sql  phase0-tenant-bootstrap.sql  phase4-audit-logging.sql  phase4-soft-deletes.sql  populate-core-datatype-mappings.sql  tenant-base-schema.sql  tenant-utility-functions.sql
tests/: test_data_api.py  test_permission_checker.py  test_permission_service.py  test_phase3_features.py  test_phase4_features.py  test_secure_query_builder.py
(+9 files in other folders)
